Added alert so that players know to open the JavaScript console.

--- a/panel.html
+++ b/panel.html
@@ -1,4 +1,5 @@
 <script>
+  alert("Open up the JavaScript console in order to play this game. Good luck with the press.");
   var questionOnTable;
   var questioningReporter;
   var afterThis;
