--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
 
                 <article>
                     <header>
-                        <h1>article header h1</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
+                        <h1>The Panelists</h1>
+                        <p id="panelLeft"></p>
+                        <p id="panelMiddle"></p>
+                        <p id="panelRight"></p>
                     </header>
                     <section>
                         <h2>article section h2</h2>
@@ -56,8 +58,11 @@
                 </article>
 
                 <aside>
-                    <h3>The Game</h3>
-                    <p>In this game, you face members of the press with three government panelists. You can switch between panelists. Beware, you can only pass the microphone one person over earch round!</p>
+                    <h3>Breaking Information</h3>
+                    <!--
+                    <p>In this game, you face members of the press with three government panelists. You can switch between panelists. Beware, you can only pass the microphone one person over earch round!</p> 
+                    -->
+                    <p id="gameAlerts"</p>
                 </aside>
 
             </div> <!-- #main -->
