--- a/index.html
+++ b/index.html
@@ -39,24 +39,26 @@
                 <article>
                     <header>
                         <h1>The Panelists</h1>
-                        <p id="panelLeft"></p>
-                        <p id="panelMiddle"></p>
-                        <p id="panelRight"></p>
+                        <div class="minister" id="rmin"></div>
+                        <div class="minister" id="mmin"></div>
+                        <div class="minister" id="lmin"></div>
                     </header>
                     <section>
-                        <h2>article section h2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
+                        <h1>Current Reporter</h1>
+                        <div class="reporter" id="currentreporter"></div>
                     </section>
                     <section>
-                        <h2>article section h2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
+                        <h2>The Line of Reporters</h2>
+                        <div class="reporter" id="r1"></div><br/>
+                        <div class="reporter" id="r2"></div><br/>
+                        <div class="reporter" id="r3"></div><br/>
                     </section>
                     <footer>
                         <h3>article footer h3</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.</p>
                     </footer>
                 </article>
-
+                
                 <aside>
                     <h3>Breaking Information</h3>
                     <!--
@@ -64,7 +66,7 @@
                     -->
                     <p id="gameAlerts"</p>
                 </aside>
-
+                
             </div> <!-- #main -->
         </div> <!-- #main-container -->
 
