--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
                 <article>
                     <header>
                         <h1>The Panelists</h1>
+                        <h2 id="alert1">This is an alert!</h2>
                         <div class="minister" id="lmin"></div>
-                        <div class="minister" id="mmin"></div>
+                        <div class="curminister" id="mmin"></div>
                         <div class="minister" id="rmin"></div>
                     </header>
                     <section>
