--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                 <article>
                     <header>
                         <h1>The Panelists</h1>
-                        <h2 id="alert1">This is an alert!</h2>
-                        <div class="minister" id="lmin"></div>
-                        <div class="curminister" id="mmin"></div>
-                        <div class="minister" id="rmin"></div>
+                        <h2 id="alert1"></h2>
+                        <div id="lmin"></div>
+                        <div id="mmin"></div>
+                        <div id="rmin"></div>
                     </header>
                     <section>
                         <h1>Current Reporter</h1>
@@ -76,13 +76,14 @@
                 <h3>footer</h3>
             </footer>
         </div>
-
+        <!--
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        -->
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
 
         <script src="js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. 
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
@@ -91,5 +92,6 @@
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X');ga('send','pageview');
         </script>
+        -->
     </body>
 </html>
