--- a/index.html
+++ b/index.html
@@ -23,13 +23,6 @@
         <div class="header-container">
             <header class="wrapper clearfix">
                 <h1 class="title">The Panel</h1>
-                <nav>
-                    <ul>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
-                    </ul>
-                </nav>
             </header>
         </div>
 
@@ -54,10 +47,6 @@
                         <div class="reporter" id="r2"></div><br/>
                         <div class="reporter" id="r3"></div><br/>
                     </section>
-                    <footer>
-                        <h3>article footer h3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.</p>
-                    </footer>
                 </article>
                 
                 <aside>
@@ -73,7 +62,7 @@
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h3>footer</h3>
+                <h3>Scroll up to play the game!</h3>
             </footer>
         </div>
         <!--
